tests/algorithms/x/Kotlin/data_structures/linked_list/from_sequence.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/algorithms/x/Kotlin/data_structures/linked_list/from_sequence.kt:37:46: error: type mismatch: inferred type is Int but BigInteger! was expected
    while ((index).toBigInteger().compareTo((NIL)) != 0) {
                                             ^
